--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,10 @@
 @import './normalize.scss';
 @import './styles/vars.scss';
 @import './styles/fonts.scss';
+
+#root {
+   grid-template-rows: 1fr auto;
+   grid-template-columns: 100%;
+   min-height: 100%;
+   display: grid;
+}
